[fix] fix navbar don't work on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,7 @@ code {
 }
 
 .material-icons { vertical-align: bottom !important; }
+
+#userBar{
+    margin: auto 0px;
+}
